// Copyright 2023 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package abcxyz.jvs;

import "jvs_request.proto";

option go_package = "github.com/abcxyz/jvs/apis/v0";

// JVSPlugin processes ValidateJustificationRequest and return validation
// result.
service JVSPlugin {
  rpc Validate(ValidateJustificationRequest)
      returns (ValidateJustificationResponse);
  rpc GetUIData(GetUIDataRequest)
      returns (UIData);
}

// ValidateJustificationRequest provides a justification for the server to validate.
message ValidateJustificationRequest {

  Justification justification = 1;
}

// ValidateJustificationResponse contains the validation result.
message ValidateJustificationResponse {
  bool valid = 1;

  // Could be empty if it's valid.
  // Otherwise some warning or error should be provided.
  repeated string warning = 2;
  repeated string error = 3;
}

// GetUIDataRequest is to retrieve data for display. Currently, it is designed to obtain the display_name and hint.
message GetUIDataRequest {
}

// The UIData comprises the data that will be displayed. At present, it exclusively includes the display_name and hint.
message UIData {

  // The display_name is presented as a category option within the JVS UI.
  string display_name = 1;

  // The hint represents the Jira Issue key in JVS, serving as a placeholder for the Reason field in the JVS UI.
  string hint = 2;
}